--- a/config.cfg
+++ b/config.cfg
@@ -393,10 +393,10 @@ delta_game_0 = [ if (= $arg1 1) [ weapon 2 3 5 4 1 6 0 ] [ weapon 4 1 6 2 3 5 0 
 domodifier = [ modifier = $arg1; onrelease [ modifier = $defaultmodifier ] ]
 glaremodeltype = [mi]
 glarepreset = [4]
-guirolloveraction = [spectator (! (isspectator (getclientnum)))]
-guirolloverimgaction = [mode 8; showgui maps]
-guirolloverimgpath = [packages/base/tactics.jpg]
-guirollovername = [toggle spectator]
+guirolloveraction = [sp mpsp6a]
+guirolloverimgaction = [showgui armyofone]
+guirolloverimgpath = [packages/base/wgui armyofone.jpg]
+guirollovername = [Part I]
 i = [26]
 l = [26]
 lightb = [255]
