--- a/config.cfg
+++ b/config.cfg
@@ -391,12 +391,12 @@ delta_edit_6 = [ edittex $arg1 ]
 delta_edit_9 = [ selectbrush $arg1 ]
 delta_game_0 = [ if (= $arg1 1) [ weapon 2 3 5 4 1 6 0 ] [ weapon 4 1 6 2 3 5 0 ] ]
 domodifier = [ modifier = $arg1; onrelease [ modifier = $defaultmodifier ] ]
-glaremodeltype = [mi]
+glaremodeltype = [qi]
 glarepreset = [4]
-guirolloveraction = [sp mpsp6a]
-guirolloverimgaction = [showgui armyofone]
-guirolloverimgpath = [packages/base/wgui armyofone.jpg]
-guirollovername = [Part I]
+guirolloveraction = [spectator (! (isspectator (getclientnum)))]
+guirolloverimgaction = [map deathtek]
+guirolloverimgpath = [packages/base/deathtek.jpg]
+guirollovername = [toggle spectator]
 i = [26]
 l = [26]
 lightb = [255]
@@ -407,7 +407,7 @@ lightr = [255]
 lightradius = [128]
 mmidx = [35]
 mmname = [carrot]
-modeltype = [mib]
+modeltype = [qib]
 modifier = [0]
 multiplier = [1]
 multiplier2 = [16]
